--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,8 @@
     </parent>
 
     <groupId>com.gioia</groupId>
-    <artifactId>webflux-intro-1</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>spring-webflux-practices</artifactId>
+    <version>1.0</version>
 
     <dependencies>
         <dependency>
