--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,16 @@
     <sonar.organization>lucas-gio</sonar.organization>
     <sonar.host.url>https://sonarcloud.io</sonar.host.url>
   </properties>
+         
+  <reporting>
+    <plugins>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>cobertura-maven-plugin</artifactId>
+        <version>2.7</version>
+      </plugin>
+    </plugins>
+  </reporting>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
